<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RealTime</string>
    <string name="gps_synced">GPS SYNCED</string>
    <string name="waiting_for_gps">Waiting for GPS…</string>
    <string name="settings">Settings</string>
    <string name="clock_digital">Digital</string>
    <string name="clock_analog">Analog</string>
    <string name="clock_both">Both</string>
    <string name="clock_mode">Clock mode</string>
    <string name="show_date">Show date</string>
    <string name="show_seconds">Show seconds</string>
    <string name="show_milliseconds">Show milliseconds</string>
    <string name="use_24h">24‑hour format</string>
    <string name="use_utc">UTC / Zulu time</string>
    <string name="time_format">Time format</string>
    <string name="date_format">Date format</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="accent_color">Accent color</string>
    <string name="app_color">App color</string>
    <string name="time_color">Time color</string>
    <string name="font">Font</string>
    <string name="font_default">Default</string>
    <string name="font_monospace">Monospace</string>
    <string name="font_serif">Serif</string>
    <string name="font_sans_serif">Sans-serif</string>
    <string name="custom_format_hint">Enter custom format…</string>
    <string name="custom">Custom</string>
    <string name="format_iso">ISO 8601 (yyyy-MM-dd\'T\'HH:mm:ss.SSS UTC)</string>
    <string name="format_24h_ms">24h with ms (HH:mm:ss.SSS)</string>
    <string name="format_12h_ms">12h with ms (hh:mm:ss.SSS a)</string>
    <string name="format_24h">24h (HH:mm:ss)</string>
    <string name="format_12h">12h (hh:mm:ss a)</string>
    <string name="format_24h_ns">24h no seconds (HH:mm)</string>
    <string name="format_12h_ns">12h no seconds (hh:mm a)</string>
    <string name="date_standard">yyyy-MM-dd</string>
    <string name="date_eu">dd/MM/yyyy</string>
    <string name="date_us">MM/dd/yyyy</string>
    <string name="date_long">dd MMMM yyyy</string>
    <string name="date_full">EEEE, dd MMMM yyyy</string>
    <string name="date_short">EEE, dd MMM</string>
    <string name="clear_realtime_cache">Clear Cache</string>
    <string name="show_gps_sync_info">Show detailed GPS sync info</string>
    <string name="sync_info_ready">GPS time ready</string>
    <string name="sync_info_waiting">Waiting for GPS…</string>
    <string name="display">Display</string>
</resources>
